# math-riddle-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  replacements.txt  requirements.txt
app/: generator.py  llm.py  main.py  rate_limit.py  schemas.py
tests/: generate_example.py
